# helm

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  study-agent-v2-implementation-notes.md  study-agent-v2.md  study-agent-v3-implementation-notes.md  study-agent-v3.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  feature.yml
.github/workflows/: pr-title.yml  python-checks-reusable.yml  required-checks.yml
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  STATE.md  preferences.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: phase-04-replay-recovery-summary-gap.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/api/: README.md
apps/study-agent/: .env.example  README.md  pyproject.toml  requirements.txt
apps/study-agent/app/: __init__.py  config.py  main.py  onboarding.py
apps/study-agent/app/engine/: artifact_writer.py  checkin.py  prioritizer.py  reviewer.py  rules.py  scheduler.py  session_runner.py
apps/study-agent/app/llm/: client.py
apps/study-agent/app/schemas/: course.py  session.py
apps/study-agent/app/storage/: files.py
apps/study-agent/app/telegram/: bot.py  handlers.py
apps/study-agent/courses/system-design/: course.md  rubric.md  sources.md  topics.json
apps/study-agent/courses/thai-intro/: course.md  rubric.md  sources.md  topics.json
apps/study-agent/data/users/demo_user/: active_courses.json  profile.json
apps/study-agent/data/users/demo_user/course_state/: system-design.json  thai-intro.json
apps/study-agent/prompts/: checkin.md  planner.md  quizzer.md  reviewer.md  system.md  teacher.md
apps/telegram-bot/: README.md
apps/worker/: README.md
migrations/: README.md  env.py
scripts/: bootstrap.sh  check-gmail-auth.py  compose-api-health-smoke.sh  doctor.sh  format.sh  get_calendar_credentials.py  install-night-runner-cron.sh  linear_intake.py  lint.sh  migrate.sh  new-migration.sh  night-runner.sh  pr_linear_reconcile.py  run-api.sh  run-telegram-bot.sh  run-worker.sh  test.sh  verify.sh  worktree-env.sh
tests/: conftest.py
(+441 files in other folders)
