[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helm"
version = "0.1.0"
description = "Personal AI leverage system (Telegram-first, DB-first, artifact-driven)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "langgraph>=0.2.50",
  "openai>=1.60.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-telegram-bot>=21.0",
  "sqlalchemy>=2.0.36",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "google-api-python-client>=2.170.0",
  "google-auth>=2.40.0",
  "httpx>=0.28.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [
  "apps/api/src",
  "apps/worker/src",
  "apps/telegram-bot/src",
  "packages/storage/src",
  "packages/connectors/src",
  "packages/agents/src",
  "packages/orchestration/src",
  "packages/llm/src",
  "packages/runtime/src",
  "packages/observability/src",
]
include = [
  "email_agent",
  "email_agent.*",
  "helm_*",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
# Exclude non-truth agent tests (EmailAgent and StudyAgent are present but non-truth for M002)
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
norecursedirs = ["__pycache__"]
# Use --ignore patterns in script instead

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "B023", "E501"]  # B008,B023: lambda patterns with loop vars; E501: use formatter
